# advent-of-code-python

./: pyproject.toml
.claude/agents/: advent-code-prettifier.md  advent-day-scaffolder.md  advent-visualizer.md
year_2025/day_1/: README.md  __init__.py
year_2025/day_4/: README.md  __init__.py
year_2025/day_5/: README.md  __init__.py
year_2025/day_6/: README.md  __init__.py
year_2025/day_7/: README.md  __init__.py
